http://li3.me/docs/specs/accepted/LSR-0-coding.md

New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2019-06-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.17.0


2019-06-02 niel
	Add: Phinx package to handle Db updates in future.


2019-05-09 niel
	Add: Backport change from CakePHP/Laravel that copies TSV files to /tmp before trying to LOAD
		 INFILE them. This should resolve any permission issues as /tmp is readable by anyone by
		 default.


2019-03-25 niel
	Fix: Reduce the size of tmux table's 'value' column from 19000 to a more reasonable size (1000).
2019-03-04 niel
	Fix: Update some regexes that were using invalid syntax. This will prevent them from being
		flagged as the errors they are with PCRE2 in PHP 7.3+.
2019-03-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.16.0


2019-03-01 niel
	Fix: Use correct object to check for video duration. Closes issue 2625
2019-02-06 niel
	Fix: Use absolute paths for version specific configuration files, in tmux.conf. Closes issue 2623.
2019-02-04 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.15.0


2019-01-12 niel
	Fix: Update search suffix for poppcorn searches. Closes issue 2620.
2019-01-07 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.14.0


2019-01-05 Bart39
	Fix: Invalid object type in ProcessAdditional::getMediaInfo.
2018-12-27 niel
	Fix: Use empty() to check for '' and NULL for filename in NameFixer::matchPredbFiles().
2018-12-24 niel
	Fix: Removed extra tab in categories tsv file that caused XXX->UHD to have incorrect parent ID.
	Chg: Increased size of xref field in collections and multigroup_collections to avoid truncation.